--- a/BikesAssignment.ipynb
+++ b/BikesAssignment.ipynb
@@ -299,7 +299,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -530,6 +532,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Many of feature's q3 values are closer to mean, as well as q1 values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -563,6 +572,13 @@
    ],
    "source": [
     "round(100*(bike.isnull().sum()/len(bike)), 2).sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### we have no null values present in our dataset"
    ]
   },
   {
@@ -1087,6 +1103,13 @@
    "source": [
     "independent_variables = list(set(list(bikefinal.columns)) - set(['cnt']))\n",
     "dependent_variables = [\"cnt\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### cnt is the target variable"
    ]
   },
   {
@@ -2286,7 +2309,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
-    "# Importing RFE and LinearRegression\n",
     "from sklearn.feature_selection import RFE\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
@@ -2991,6 +3013,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### our model condsidered the params with true value"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
@@ -3033,7 +3062,9 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3292,6 +3323,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## As a standard notation, through out the feature engineering, we consider features only with vif<=5 , p<=0.05"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
@@ -3468,6 +3506,13 @@
     "vif['VIF'] = round(vif['VIF'], 2)\n",
     "vif = vif.sort_values(by = \"VIF\", ascending = False)\n",
     "vif"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### we are dropping variable atemp because it has high vif and high p value if you check above summary stats"
    ]
   },
   {
@@ -3718,6 +3763,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### we are dropping variable May because it has low vif and high p value if you check above summary stats"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
@@ -3958,6 +4010,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### we are dropping variable february because it has low vif and high p value if you check above summary stats"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
@@ -4191,6 +4250,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### we are dropping variable holiday because it has low vif and high p value if you check above summary stats"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
@@ -4414,6 +4480,13 @@
     "vif['VIF'] = round(vif['VIF'], 2)\n",
     "vif = vif.sort_values(by = \"VIF\", ascending = False)\n",
     "vif"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### we are dropping variable spring because it has high vif and low p value if you check above summary stats"
    ]
   },
   {
@@ -4778,6 +4851,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The plot shows us that the error terms of test set are normally distributed over 0, which is a good indication that we built a good model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 86,
    "metadata": {},
@@ -4948,6 +5028,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Final r2_score on test set is 0.81 , which is close to model r2 value"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 91,
    "metadata": {},
@@ -5002,6 +5089,13 @@
     "fig.suptitle('y_test vs y_test_pred', fontsize=20)         # Plot heading \n",
     "plt.xlabel('y_test', fontsize=18)                          # X-label\n",
     "plt.ylabel('y_test_pred', fontsize=16)                     # Y-label"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Scatterplot b/w y_test and y_test_pred shows that the datapoints are closely clustered"
    ]
   },
   {
