--- a/BikesAssignment.ipynb
+++ b/BikesAssignment.ipynb
@@ -2267,13 +2267,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Drop dteday variable as the variables month, yr also describes this with strong correlation"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
@@ -4823,6 +4816,13 @@
    "source": [
     "train_error_series = pd.Series(y_train-y_train_pred)\n",
     "train_error_series.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Error Terms = diff between actual test data and model predictions"
    ]
   },
   {
